<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/et_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/nama"
            />
        <EditText
            android:id="@+id/et_nilaipraktikum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_nama"
            app:layout_constraintStart_toStartOf="@id/et_nama"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/nilai_praktikum"
            />
        <EditText
            android:id="@+id/et_assessment1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_nilaipraktikum"
            app:layout_constraintStart_toStartOf="@id/et_nilaipraktikum"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/nilai_assessment_1"
            />
        <EditText
            android:id="@+id/et_assessment2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_assessment1"
            app:layout_constraintStart_toStartOf="@id/et_assessment1"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/nilai_assessment2"

            />
        <TextView
            android:id="@+id/tv_absensi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/absensi_75"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/et_assessment2"
            app:layout_constraintStart_toStartOf="@id/et_assessment2"
            app:layout_constraintEnd_toStartOf="@id/rg_absensi"
            />
        <RadioGroup
            android:id="@+id/rg_absensi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="@id/tv_absensi"
            app:layout_constraintStart_toEndOf="@id/tv_absensi"
            app:layout_constraintBottom_toBottomOf="@id/tv_absensi"
            app:layout_constraintEnd_toEndOf="parent">

            <RadioButton
                android:id="@+id/rb_ya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ya"
                />
            <RadioButton
                android:id="@+id/rb_tidak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tidak"
                />
        </RadioGroup>
        <Button
            android:id="@+id/btn_hitungnilai"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_absensi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_reset"
            android:text="@string/hitung_nilai_akhir"
            android:background="#FF4081"
            android:textColor="#FFF"
            android:layout_marginTop="16dp"
            />
        <Button
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/btn_hitungnilai"
            app:layout_constraintStart_toEndOf="@id/btn_hitungnilai"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/btn_hitungnilai"
            android:text="@string/reset"
            android:background="#FF4081"
            android:textColor="#FFF"
            />
        <TextView
            android:id="@+id/tv_nilaiakhir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            app:layout_constraintTop_toBottomOf="@id/btn_hitungnilai"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            android:textSize="34sp"
            />
        <ImageView
            android:id="@+id/image_mood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_nilaiakhir"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_indeks"
            android:src="@drawable/ic_mood_bad_pink_24dp"
            android:layout_marginTop="32dp"
            />
        <TextView
            android:id="@+id/tv_indeks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/image_mood"
            app:layout_constraintStart_toEndOf="@id/image_mood"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/image_mood"
            android:text="@string/a"
            android:textSize="112sp"
            android:textColor="#FF4081"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

